# rust-based-scrapper

./: .gitignore  README.md  Trunk.toml  plan.md
backend/: .env  .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: .gitignore  Cargo.toml  index.html
frontend/src/: app.rs  lib.rs  main.rs  processing.rs
rust-web-scrapper/: README.md
